# TourMate

./: .firebaserc  .gitattributes  .gitignore  INSTRUCTIONS.md  README.md  TODO.md  firebase.json  firebase.rules  firestore.indexes.json  implementation_todo.md  pubspec.yaml  run_app.bat  run_app.sh  storage.rules  tourmate_gap_analysis_report.md
android/app/: build.gradle.kts  google-services.json
assets/: l10
assets/l10n/: app_tl.json
ios/Runner/: Info.plist
lib/: firebase_options.dart  main.dart
lib/data/: cebu_graph_data.dart  mock_tour_spot_repository.dart  pathfinding_demo_example.dart  tour_spot_model.dart  tour_spot_repository.dart
lib/docs/: ADMIN_IMPLEMENTATION_COMPLETE.md  LANGUAGE_SWITCHING_IMPLEMENTATION.md
lib/examples/: language_integration_example.dart
lib/l10n/: app_ceb.arb  app_en.arb  app_localizations.dart  app_localizations_ceb.dart  app_localizations_en.dart  app_localizations_tl.dart  app_tl.arb
lib/models/: booking_model.dart  chat_room_model.dart  firestore_schema.md  geo_coordinate.dart  graph_node.dart  guide_verification_model.dart  itinerary_model.dart  message_model.dart  notification_model.dart  notification_settings_model.dart  payment_model.dart  report_model.dart  review_model.dart  tour_guide_model.dart  tour_model.dart  user_model.dart
plans/: carousel_fix_plan.md
test/: pathfinding_test.dart  widget_test.dart
web/: firebase-config.js  index.html
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  runner.exe.manifest.xml  win32_window.cpp  win32_window.h
(+93 files in other folders)
